--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet"  href="css/site.css">
     </head>
+
     <body>
         <div class="container">
+
             <header>
                 <h1>Welcome to my site</h1>
             </header>
@@ -16,6 +19,13 @@
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officiadeserunt mollit anim id est laborum. </p>   
+
+                <div class="outer">
+                    <div class="inner">
+                        hungry ghosts
+                    </div>
+                </div>
+
             </article>
             
             <aside>
@@ -25,6 +35,8 @@
                     <li><a href='#'>link</a></li>
                 </ul>
             </aside>
+
         </div>
+
     </body>
 </html>
