--- a/labs/02_busy_hands/readme.html
+++ b/labs/02_busy_hands/readme.html
@@ -5,8 +5,8 @@ Suggestions for ID names and classes
 #wrapper 
 #container 
 
-<header> 
-<nav>
+<!-- <header> 
+<nav> -->
 
 #main-content 
 #social-media 
@@ -21,7 +21,7 @@ Suggestions for ID names and classes
     .home-box
     .home-box
 
-<footer> 
+<!-- <footer>  -->
     .box-footer 
          .blogroll
     .box-footer 
@@ -30,3 +30,34 @@ Suggestions for ID names and classes
 #copyright 
 #companybottom 
 
+<!DOCTYPE html>
+<html>
+
+    <head>
+        <title>Busy Hands</title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+
+    <body>
+
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+            
+        </header>
+
+        <nav>
+
+        </nav>
+
+    </body>
+
+</html>
