updated form page

--- a/labs/01_brooklyn/index.html
+++ b/labs/01_brooklyn/index.html
@@ -18,9 +18,9 @@
         <img src='images/home-bloghero.png' class="top">
         <img src='images/home-rings.png' class="top">
         <p class="title">Our Latest Collection</p>
-        <a href="#">May 25th,2012<a>
+        <a href="#">May 25th,2012</a>
         <p>Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalities. Holisticly extend cross-media technologies rather than cutting-edge experiences.</p>
-        <p>Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalities. Holisticly extend cross-media technologies rather than cutting-edge experiences.<a href='#'>Read More...<a></p> 
+        <p>Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalities. Holisticly extend cross-media technologies rather than cutting-edge experiences.<a href='#'> Read More...<a></p> 
         <img src='images/press-nbcnewyork.gif' class="bottom">
         <img src='images/press-huffpost.gif' class="bottom">
         <img src='images/press-logo_lucky.gif' class="bottom">
