--- a/css-tricks/index.html
+++ b/css-tricks/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class='container'>
-        <h1>CSS Tricks</h1>
+        <h1 class="mainheading">CSS Tricks</h1>
         
         <h2>Display</h2>
 
@@ -21,6 +21,23 @@
         <p>
         Here is an example of <span class='display-inline'>inline</span > and here is an example of <span class='display-block'>block</span>.
         </p>
+
+        <div class="display-inline-block">some inline block text</div> some more text
+
+        <h2>Position</h2>
+
+        <div class="box position-static">static</div>
+
+        <div class="box position-fixed">fixed</div>
+
+        <div class="box position-relative">
+            relative
+
+            <div class="tiny-box position-absolute "></div>
+
+        </div>
+
+        <div class="box position-absolute">absolute</div>
 
     </div>
 
